--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /online_inference/embedding.pkl
 /cdx_test.py
 /cdx.txt
+
+/offline_data_ingestion_and_query_interface/src/app.log
+/online_inference/output.json
